--- a/Sample/app/build.gradle
+++ b/Sample/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'com.lq.plugin.init'
 }
 
 android {
@@ -42,4 +44,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'io.github.langqiang:base-core:1.0.0-SNAPSHOT'
+
+    implementation 'io.github.langqiang:DeepLink:1.0.0-SNAPSHOT'
+
+    implementation 'io.github.langqiang:ThreadPool:1.1.0-SNAPSHOT'
+
+    kapt 'io.github.langqiang:processor:1.0.0-SNAPSHOT'
+
 }
