--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,7 @@ rootProject.name = "AndroidProjectEngine"
 include ':Sample:app'
 include ':test'
 include(":component-factory:base")
+include ':component-factory:Deeplink'
+include ':component-factory:ThreadPool'
+include ':component-factory:processorlib'
+include ':component-factory:annotationLib'
