--- a/component-factory/base/build.gradle
+++ b/component-factory/base/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 ext {
-    publishVersion = '1.2.0-SNAPSHOT'
+    publishVersion = '1.3.0-SNAPSHOT'
     publishArtifactName = 'base-core'
     publishComponentType = 'aar-release'
 }
@@ -25,6 +25,10 @@ android {
             buildConfigField "boolean", "IS_ALLOW_PROXY", IS_ALLOW_PROXY
         }else {
             buildConfigField "boolean", "IS_ALLOW_PROXY", "false"
+        }
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
 
     }
