--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ include ':component-factory:Deeplink'
 include ':component-factory:ThreadPool'
 include ':component-factory:processorlib'
 include ':component-factory:annotationLib'
+include ':component-factory:StatisticWidget'
