--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ include ':component-factory:ThreadPool'
 include ':component-factory:processorlib'
 include ':component-factory:annotationLib'
 include ':component-factory:StatisticWidget'
+include ':component-factory:UICompose'
