--- a/component-factory/UICompose/build.gradle
+++ b/component-factory/UICompose/build.gradle
@@ -1,21 +1,26 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'com.lq.plugin.init'
+    id 'maven-publish'
 }
+ext {
+    publishVersion = '1.0.0-SNAPSHOT'
+    publishArtifactName = 'UICompose'
+    publishComponentType = 'aar-release'
+}
+apply from:'../../publish-tool.gradle'
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.godq.androidprojectengine"
         minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -38,18 +43,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    implementation 'io.github.langqiang:base-core:1.2.0-SNAPSHOT'
-//    implementation 'io.github.langqiang:BottomNavigation:1.0.0-SNAPSHOT'
-
-    implementation project(':component-factory:StatisticWidget')
-    implementation project(':component-factory:UICompose')
-
-
-    kapt 'io.github.langqiang:processor:1.0.0-SNAPSHOT'
-
 }
