--- a/Sample/app/build.gradle
+++ b/Sample/app/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'io.github.langqiang:base-core:1.2.0-SNAPSHOT'
+//    implementation 'io.github.langqiang:base-core:1.2.0-SNAPSHOT'
+    implementation project(':component-factory:base')
+
 //    implementation 'io.github.langqiang:BottomNavigation:1.0.0-SNAPSHOT'
 
     implementation project(':component-factory:StatisticWidget')
