打印通用参数信息

--- a/Sample/app/src/main/AndroidManifest.xml
+++ b/Sample/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.godq.androidprojectengine">
 
     <application
@@ -7,8 +8,11 @@
         android:icon="@mipmap/engine_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/engine_logo"
+        android:usesCleartextTraffic="true"
+
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidProjectEngine">
+        android:theme="@style/Theme.AndroidProjectEngine"
+        tools:ignore="UnusedAttribute">
         <activity
             android:name=".MainActivity"
             android:exported="true">
