--- a/Sample/app/src/main/AndroidManifest.xml
+++ b/Sample/app/src/main/AndroidManifest.xml
@@ -8,11 +8,14 @@
         android:icon="@mipmap/engine_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/engine_logo"
-        android:usesCleartextTraffic="true"
-
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidProjectEngine"
+        android:usesCleartextTraffic="true"
         tools:ignore="UnusedAttribute">
+        <activity
+            android:name=".PreviewTestActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
