--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-
-#sonatype
-sonaTypeUserName=493062120
-sonaTypePassWord=Lqiang409409!
+org.gradle.parallel=false
