--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':Sample:business2'
 include ':Sample:business2-api'
 include ':Sample:business3'
 include ':Sample:business3-api'
+include ':component-factory:AppLogcat'
