--- a/component-factory/AppLogcat/build.gradle
+++ b/component-factory/AppLogcat/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'maven-publish'
+    id 'kotlin-kapt'
 }
 
 ext {
@@ -18,7 +19,12 @@ android {
         minSdk 16
         targetSdk 32
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        if (project.hasProperty("FORCE_SHOW_ALC")) {
+            buildConfigField "boolean", "FORCE_SHOW_ALC", FORCE_SHOW_ALC
+        } else {
+            buildConfigField "boolean", "FORCE_SHOW_ALC", "false"
+        }
+
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -26,6 +32,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
         }
     }
     compileOptions {
@@ -35,6 +42,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    dataBinding { // 开启 DataBinding
+        enabled true
+    }
 }
 
 dependencies {
@@ -42,7 +53,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    compileOnly 'com.jakewharton.timber:timber:5.0.1'
+
+    kapt rootProject.ext.databinding_compiler // DataBinding 注解处理依赖
+
 }
