--- a/component-factory/AppLogcat/src/main/AndroidManifest.xml
+++ b/component-factory/AppLogcat/src/main/AndroidManifest.xml
@@ -2,4 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.godq.applogcat">
 
+    <application>
+
+        <provider
+            android:name=".init.ALCInitProvider"
+            android:authorities="${applicationId}.alcinitprovider"
+            android:exported="false" />
+    </application>
+
 </manifest>
