--- a/test/build.gradle
+++ b/test/build.gradle
@@ -30,6 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    dataBinding{
+        enabled true
+    }
 }
 
 dependencies {
@@ -43,4 +47,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation project(":component-factory:base")
+    implementation project(":component-factory:AppLogcat")
 }
