--- a/test/src/main/AndroidManifest.xml
+++ b/test/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidProjectEngine">
         <activity
+            android:name=".TwoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OtherProcessActivity"
+            android:exported="false"
+            android:process=":two" />
+        <activity
             android:name=".TestActivity"
             android:exported="true">
             <intent-filter>
