ALC 1.0.6-test 本地持久化

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':Sample:business2-api'
 include ':Sample:business3'
 include ':Sample:business3-api'
 include ':component-factory:AppLogcat'
+include ':component-factory:SideSlideMenuWidget'
