--- a/test/src/main/AndroidManifest.xml
+++ b/test/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidProjectEngine">
+
+        <meta-data android:name="force_boot_alc" android:value="${FORCE_BOOT_ALC}"/>
+
         <activity
             android:name=".TwoActivity"
             android:exported="false" />
