--- a/component-factory/SideSlideMenuWidget/build.gradle
+++ b/component-factory/SideSlideMenuWidget/build.gradle
@@ -1,16 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'maven-publish'
-    id 'kotlin-kapt'
 }
-
-ext {
-    publishVersion = '1.0.6-test-SNAPSHOT'
-    publishArtifactName = 'AppLogcat'
-    publishComponentType = 'aar-release'
-}
-apply from:'../../publish-tool.gradle'
 
 android {
     compileSdk 32
@@ -19,6 +10,7 @@ android {
         minSdk 16
         targetSdk 32
 
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -26,7 +18,6 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-
         }
     }
     compileOptions {
@@ -36,10 +27,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-    dataBinding { // 开启 DataBinding
-        enabled true
-    }
 }
 
 dependencies {
@@ -47,16 +34,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
-    compileOnly 'com.jakewharton.timber:timber:5.0.1'
-
-    kapt rootProject.ext.databinding_compiler // DataBinding 注解处理依赖
-
-    def room_version = "2.4.3"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    // Room的Kotlin扩展和对协程的支持
-    implementation "androidx.room:room-ktx:$room_version"
-
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
