--- a/test/build.gradle
+++ b/test/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'kotlin-android'
 }
 
+apply from: '../gradle_utils.gradle'
+
 
 android {
     compileSdk 32
@@ -15,6 +17,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        manifestPlaceholders = [
+                FORCE_BOOT_ALC    : readEnvString("FORCE_BOOT_ALC", "false"),
+        ]
     }
 
     buildTypes {
