RecyclerView 列表左滑菜单组件 v1.0.1

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -54,4 +54,5 @@ dependencies {
 
     implementation project(":component-factory:base")
     implementation project(":component-factory:AppLogcat")
+    implementation project(":component-factory:SideSlideMenuWidget")
 }
