--- a/component-factory/SideSlideMenuWidget/build.gradle
+++ b/component-factory/SideSlideMenuWidget/build.gradle
@@ -1,7 +1,15 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
+
+ext {
+    publishVersion = '1.0.1-SNAPSHOT'
+    publishArtifactName = 'SideSlideMenuWidget'
+    publishComponentType = 'aar-release'
+}
+apply from:'../../publish-tool.gradle'
 
 android {
     compileSdk 32
