--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 org.gradle.parallel=false
+android.prefabVersion=2.0.0
