xskin: 去掉base库依赖，添加直接加载本地以存在的皮肤包接口 去掉无用log

--- a/component-factory/xskin/build.gradle
+++ b/component-factory/xskin/build.gradle
@@ -33,12 +33,14 @@ android {
 dependencies {
 
     implementation rootProject.ext.core_ktx
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation rootProject.ext.appcompat
+    implementation rootProject.ext.ktx_coroutines_core
+    implementation rootProject.ext.ktx_coroutines_android
     implementation 'com.google.android.material:material:1.5.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation rootProject.ext.timber
 
-    implementation rootProject.ext.base_core
 
 }
