--- a/version-config.gradle
+++ b/version-config.gradle
@@ -21,6 +21,7 @@ ext {
     coordinatorlayout = 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     constraintlayout = 'androidx.constraintlayout:constraintlayout:2.1.4'
     material = 'com.google.android.material:material:1.3.0'
+    lifecycle_extensions = 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     palette = 'androidx.palette:palette:1.0.0'
     viewpager2 = 'androidx.viewpager2:viewpager2:1.0.0'
     legacy_support_v4 = 'androidx.legacy:legacy-support-v4:1.0.0'
