--- a/test/build.gradle
+++ b/test/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation project(":component-factory:base")
     implementation project(":component-factory:AppLogcat")
     implementation project(":component-factory:SideSlideMenuWidget")
+    implementation project(":component-factory:UICompose")
 //    implementation project(":component-factory:xskin")
     implementation 'io.github.langqiang:XSkin:1.0.3-SNAPSHOT'
 
