UICompose：1.0.4 TitleBar显示隐藏接口 XSkin:1.0.4 提供转场效果 SkinTransitionBgView

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     implementation project(":component-factory:AppLogcat")
     implementation project(":component-factory:SideSlideMenuWidget")
     implementation project(":component-factory:UICompose")
-//    implementation project(":component-factory:xskin")
-    implementation 'io.github.langqiang:XSkin:1.0.3-SNAPSHOT'
+    implementation project(":component-factory:xskin")
+//    implementation 'io.github.langqiang:XSkin:1.0.3-SNAPSHOT'
 
 }
